Added typing effect

--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 
   <div id="secure-screen" style="display:none;">
     <h2 class="alien-title">ACCESS GRANTED</h2>
-    <p>Welcome, operative. Classified mission data follows...</p>
-    <p><em>“Building Better Worlds.”</em></p>
+    <div id="typed-text"></div>
 
-    <div class="button-group">
+    <div class="button-group" style="display:none;" id="button-group">
       <a href="https://www.aliensvspredator.net/" target="_blank">AVP Site</a>
       <a href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien IMDb</a>
       <a href="https://www.weylandindustries.com/" target="_blank">Weyland Industries</a>
