--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
   </div>
 
   <script src="script.js"></script>
+
+  <audio id="ambient-hum" src="hum.wav" loop></audio>
+  <audio id="beep-sound" src="beep.wav"></audio>
+
 </body>
 </html>
