Add alarm on failure

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
   <audio id="ambient-hum" src="hum.wav" loop></audio>
   <audio id="beep-sound" src="beep.wav"></audio>
+  <audio id="alarm-sound" src="alarm.wav"></audio>
 
 </body>
 </html>
