Adding logo, fade-in, code clean-up

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <div id="secure-screen" style="display:none;">
     <h2 class="alien-title">ACCESS GRANTED</h2>
+    <img src="logo.png" alt="Weyland-Yutani Logo" class="logo">
     <div id="typed-text"></div>
 
     <div class="button-group" style="display:none;" id="button-group">
