--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div id="typed-text"></div>
 
     <div class="button-group" style="display:none;" id="button-group">
-      <a href="https://www.aliensvspredator.net/" target="_blank">AVP Site</a>
-      <a href="https://www.imdb.com/title/tt0078748/" target="_blank">Alien IMDb</a>
-      <a href="https://www.weylandindustries.com/" target="_blank">Weyland Industries</a>
+      <a href="https://www.aliensvspredator.net/" target="_blank">OORAH</a>
+      <a href="https://www.imdb.com/title/tt0078748/" target="_blank">You son of a bitch I'm in</a>
+      <a href="https://www.weylandindustries.com/" target="_blank">That's so crazy, it just might work</a>
     </div>
   </div>
 
