Adjusted bottom padding to avoid a 'jump'

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
     <h2 class="alien-title">ACCESS GRANTED</h2>
     <img src="logo.png" alt="Weyland-Yutani Logo" class="logo">
     <div id="typed-text"></div>
-
-    <div class="button-group" style="display:none;" id="button-group">
-      <a href="https://www.when2meet.com/" target="_blank">OORAH</a>
-      <a href="https://www.when2meet.com/" target="_blank">You son of a bitch I'm in</a>
-      <a href="https://www.when2meet.com/" target="_blank">That's so crazy, it just might work</a>
+    <div id="button-box">
+      <div class="button-group" style="display:none;" id="button-group">
+        <a href="https://www.when2meet.com/" target="_blank">OORAH</a>
+        <a href="https://www.when2meet.com/" target="_blank">You son of a bitch I'm in</a>
+        <a href="https://www.when2meet.com/" target="_blank">That's so crazy, it just might work</a>
+      </div>
     </div>
   </div>
 
