Kept the mission select box visible

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   <div id="secure-screen" style="display:none;">
     <h2 class="alien-title">ACCESS GRANTED</h2>
     <img src="logo.png" alt="Weyland-Yutani Logo" class="logo">
-    <div id="typed-text"></div>
+    <div id="typed-text-1"></div>
     <div id="doc-selector" style="display:none;"></div>
+    <div id="typed-text-2" style="display:none;"></div>
     <div id="button-box">
       <div class="button-group" style="display:none;" id="button-group">
         <a href="https://www.when2meet.com/" target="_blank">OORAH</a>
