--- a/index.html
+++ b/index.html
@@ -24,11 +24,7 @@
     <div id="doc-selector" style="display:none;"></div>
     <div id="typed-text-2" style="display:none;"></div>
     <div id="button-box">
-      <div class="button-group" style="display:none;" id="button-group">
-        <a href="https://www.when2meet.com/" target="_blank">OORAH</a>
-        <a href="https://www.when2meet.com/" target="_blank">You son of a bitch I'm in</a>
-        <a href="https://www.when2meet.com/" target="_blank">That's so crazy, it just might work</a>
-      </div>
+      <div class="button-group" style="display:none;" id="button-group"></div>
     </div>
   </div>
 
